CSS.supports returns false for custom properties https://bugs.webkit.org/show_bug.cgi?id=154669

Reviewed by Alexey Proskuryakov.

Fix the bug that the version of DOMCSSNamespace::supports which takes property ID and value separately
couldn't parse CSS custom properties.

* LayoutTests/imported/w3c/web-platform-tests/css/css-conditional/js/CSS-supports-L3-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/conditional-rules-expected.txt:
* Source/WebCore/css/DOMCSSNamespace.cpp:
(WebCore::DOMCSSNamespace::supports):

Canonical link: https://commits.webkit.org/252987@main